--- a/Terra-lua.html
+++ b/Terra-lua.html
@@ -13,3 +13,14 @@
 
     <title>Earth and Moon</title>
 </head>
+
+<style>
+    body {
+        background-color: black;
+    }
+
+    .earth {
+        position: absolute;
+        top: calc(50% - 100px);
+        left: calc(50% - 100px);
+    }
