--- a/Terra-lua.html
+++ b/Terra-lua.html
@@ -24,3 +24,16 @@
         top: calc(50% - 100px);
         left: calc(50% - 100px);
     }
+     .earth img {
+        height: 200px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 200px;
+    }
+
+    .moon-container {
+        position: absolute;
+        top: calc(50% - 25px);
+        left: calc(50% - 25px);
+    }
