--- a/Terra-lua.html
+++ b/Terra-lua.html
@@ -37,3 +37,17 @@
         top: calc(50% - 25px);
         left: calc(50% - 25px);
     }
+     .moon {
+        animation: spin 20s linear infinite;
+        background: none;
+        height: 50px;
+        pointer-events: none;
+        transform-origin: 25px;
+        width: 50px;
+    }
+
+    .moon img {
+        height: 50px;
+        transform: translateX(-160px) translateY(-160px);
+        width: 50px;
+    }
