--- a/Terra-lua.html
+++ b/Terra-lua.html
@@ -51,3 +51,21 @@
         transform: translateX(-160px) translateY(-160px);
         width: 50px;
     }
+    .earth img,
+    .moon img {
+        border-radius: 50%;
+        box-shadow: 0 0 12em 1em rgba(110, 140, 200, .6);
+    }
+
+    .earth img,
+    .moon img {
+        border-radius: 50%;
+        box-shadow: 0 0 12em 1em rgba(110, 140, 200, .6);
+    }
+
+    @keyframes spin {
+        to {
+            transform: rotateZ(360deg);
+        }
+    }
+</style>
