--- a/Terra-lua.html
+++ b/Terra-lua.html
@@ -69,3 +69,18 @@
         }
     }
 </style>
+<body>
+    <article class="earth-demo">
+        <div class="earth">
+            <img src="https://cssanimation.rocks/images/random/earth.png" alt="">
+        </div>
+
+        <div class="moon-container">
+            <div class="moon">
+                <img src="https://cssanimation.rocks/images/random/moon.png" alt="">
+            </div>
+        </div>
+    </article>
+</body>
+
+</html>
